= Package NNbenchmark =
- Akshaj Verma, Salabila Mahdi, Patrice Kiener
- Christophe Dutang, John Nash 

NNbenchmark 3.0.4 - 2020-07-03
==============================
- remove commented traces
- add an argument to trainPredict_1mth1data()
- add mWoodG1 rda file (Simon Wood's GAM test file for Gaussian family)

NNbenchmark 3.0.3 - 2020-06-29
==============================
- NNtrainPredict now has the options for csv outputs, same as 2019 legacy code
- round time objects in NNsummary

NNbenchmark 3.0.2 - 2020-06-29
==============================
- adjusted NNtrainPredict and NNsummary functions to new timing functions


NNbenchmark 3.0.1 - 2020-06-27
==============================
- DESCRIPTION: Roxygen: list(old_usage = TRUE)
- timestart(), timediff()


NNbenchmark 3.0.0 - 2020-06-21 (Bila + Patrice)
===============================================
- NNTrain_Predict.R for NEW 2020 code do.call() implementation to train and predict NNs
- Move NNbenchmark2020 to top directory. This is new NNbenchmark
- Move NNbenchmark2019 to a new directory
- Fix the date in DESCRIPTION

NNbenchmark 2.3.7 - 2020-06-19 (Bila)
=====================================
- Added MSE and WAE to funRMSE.R
- Made a new R file: NNSummary.R for 2020 summary function

NNbenchmark 2.3.6 - 2020-01-11
==============================
- ht() and ht9() fully rewritten. Accept now array and data.frame with matrices inside
- README.md added

NNbenchmark 2.3.5 - 2019-08-22
==============================
- DESCRIPTION and a_intro.R: add the html links to GitHub and AkshajVerma.com

NNbenchmark 2.3.4 - 2019-08-21 - sent to CRAN
=============================================
- DESCRIPTION: Modify the title to match title case (recommended by CRAN)

NNbenchmark 2.3.3 - 2019-08-21
==============================
- DESCRIPTION: Modify the title 
- All files: Add value to Rd files (return in roxygen comments) for every functions

NNbenchmark 2.3.2 - 2019-08-20
==============================