@@ -4,8 +4,8 @@ Description: Datasets and functions to benchmark (convergence, speed, ease of us
 Imports: R6, pkgload
 Suggests: brnn, validann
 Depends: R (>= 3.5.0)
-Version: 3.0.4
-Date: 2020-06-30
+Version: 3.0.5
+Date: 2020-07-30
 License: GPL-2
 Maintainer: Patrice Kiener <fattailsr@inmodelia.com>
 Author: Patrice Kiener [aut, cre],
@@ -15,5 +15,5 @@ Author: Patrice Kiener [aut, cre],
 Encoding: UTF-8
 NeedsCompilation: no
 LazyData: true
-RoxygenNote: 7.1.0
+RoxygenNote: 7.1.1
 Roxygen: list(old_usage = TRUE)
