@@ -1,5 +1,5 @@
 % Generated by roxygen2: do not edit by hand
-% Please edit documentation in R/NNsummary.R
+% Please edit documentation in R/NNSummary.R
 \name{NNsummary}
 \alias{NNsummary}
 \title{Summarize Calculations of RMSE, MSE, MAE, and WAE}
